--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Memory0126-1.loader.js";
+      var loaderUrl = buildUrl + "/Memory0126-2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Memory0126-1.data",
-        frameworkUrl: buildUrl + "/Memory0126-1.framework.js",
-        codeUrl: buildUrl + "/Memory0126-1.wasm",
+        dataUrl: buildUrl + "/Memory0126-2.data",
+        frameworkUrl: buildUrl + "/Memory0126-2.framework.js",
+        codeUrl: buildUrl + "/Memory0126-2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "memoryyy",
@@ -112,7 +112,7 @@
               }).then((unityInstance) => {
                 document.querySelector("#unity-loading-bar").style.display = "none";
                 document.querySelector("#unity-fullscreen-button").onclick = () => {
-                  unityInstance.SetFullscreen(1);
+                  document.makeFullscreen('unity-container');
                 };
 
               }).catch((message) => {
